# stac-fastapi-pgstac

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Dockerfile.tests  Makefile  README.md  RELEASING.md  compose-tests.yml  compose.nginx.yml  compose.tests.yml  compose.yml  docker-compose.nginx.yml  docker-compose.yml  index.html  mkdocs.yml  nginx.conf  objects.inv  pr_description.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: cicd.yaml  deploy_mkdocs.yml  packages.yml  pages.yml  publish.yml
api/stac_fastapi/pgstac/: index.html
api/stac_fastapi/pgstac/app/: index.html
api/stac_fastapi/pgstac/config/: index.html
api/stac_fastapi/pgstac/core/: index.html
api/stac_fastapi/pgstac/db/: index.html
api/stac_fastapi/pgstac/extensions/: index.html
api/stac_fastapi/pgstac/extensions/catalogs/: index.html
api/stac_fastapi/pgstac/extensions/filter/: index.html
api/stac_fastapi/pgstac/extensions/query/: index.html
api/stac_fastapi/pgstac/models/: index.html
api/stac_fastapi/pgstac/models/links/: index.html
api/stac_fastapi/pgstac/transactions/: index.html
api/stac_fastapi/pgstac/utils/: index.html
contributing/: index.html
docs/: mkdocs.yml  settings.md
docs/api/stac_fastapi/pgstac/: app.md  config.md  index.md  transactions.md  version.md
docs/api/stac_fastapi/pgstac/extensions/: index.md
docs/api/stac_fastapi/pgstac/models/: index.md
docs/src/: settings.md
docs/src/api/stac_fastapi/pgstac/: app.md  core.md  db.md  utils.md
docs/src/api/stac_fastapi/pgstac/extensions/: catalogs.md  filter.md  query.md
docs/src/api/stac_fastapi/pgstac/models/: links.md
release-notes/: index.html
releasing/: index.html
scripts/: ingest_joplin.py  load-joplin.sh  publish  validate
search/: search_index.json
settings/: index.html
stac_fastapi/pgstac/: __init__.py  app.py  config.py  core.py  db.py  transactions.py  utils.py  version.py
stac_fastapi/pgstac/extensions/: __init__.py  filter.py  free_text.py  query.py  utils.py
stac_fastapi/pgstac/extensions/catalogs/: __init__.py  catalogs_client.py  catalogs_database_logic.py  catalogs_links.py
stac_fastapi/pgstac/models/: extensions.py  links.py
stac_fastapi/pgstac/types/: base_item_cache.py  search.py
tests/: conftest.py  test_app.py  test_app_import.py  test_catalogs.py  test_config.py  test_utils.py
tests/api/: test_api.py  test_links.py  test_links_with_root_path.py
tests/clients/: test_postgres.py
tests/data/: test2_item.json  test_collection.json  test_item.json
tests/extensions/: test_catalogs.py  test_utils.py
tests/models/: test_extensions.py
tests/resources/: test_collection.py  test_conformance.py  test_item.py  test_mgmt.py
